// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationRow card renders properly 1`] = `
<form
  class="content-view-pf-pagination paginator card-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropup pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        6 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            6
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            25
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            50
          </a>
        </li>
      </ul>
    </div>
    <span>
      לדף
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        1-15
      </span>
       שֶׁל 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד ראשון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד קודם"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    />
    <input
      class="pagination-pf-page form-control"
      type="text"
      value=""
    />
    <span>
       שֶׁל 
      <span
        class="pagination-pf-pages"
      >
        5
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד הבא"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד אחרון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;

exports[`PaginationRow list renders properly 1`] = `
<form
  class="content-view-pf-pagination paginator list-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropup pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        6 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            6
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            25
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            50
          </a>
        </li>
      </ul>
    </div>
    <span>
      לדף
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        1-15
      </span>
       שֶׁל 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד ראשון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד קודם"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    />
    <input
      class="pagination-pf-page form-control"
      type="text"
      value=""
    />
    <span>
       שֶׁל 
      <span
        class="pagination-pf-pages"
      >
        5
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד הבא"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד אחרון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;

exports[`PaginationRow renders with dropdown page size selector 1`] = `
<form
  class="content-view-pf-pagination paginator list-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropdown pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        6 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            6
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            25
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            50
          </a>
        </li>
      </ul>
    </div>
    <span>
      לדף
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        1-15
      </span>
       שֶׁל 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד ראשון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד קודם"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    />
    <input
      class="pagination-pf-page form-control"
      type="text"
      value=""
    />
    <span>
       שֶׁל 
      <span
        class="pagination-pf-pages"
      >
        5
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד הבא"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד אחרון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;

exports[`PaginationRow table renders properly 1`] = `
<form
  class="content-view-pf-pagination paginator table-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropup pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        6 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            6
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            25
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            50
          </a>
        </li>
      </ul>
    </div>
    <span>
      לדף
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        1-15
      </span>
       שֶׁל 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד ראשון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class="disabled"
      >
        <a
          href="#"
          title="עמוד קודם"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    />
    <input
      class="pagination-pf-page form-control"
      type="text"
      value=""
    />
    <span>
       שֶׁל 
      <span
        class="pagination-pf-pages"
      >
        5
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד הבא"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="עמוד אחרון"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;

exports[`PaginationRow.AmountOfPages renders 1`] = `
<span>
   of 
  <span
    class="pagination-pf-pages"
  >
    4
  </span>
</span>
`;

exports[`PaginationRow.Back renders 1`] = `
<ul
  class="pagination pagination-pf-back"
>
  <li
    class="disabled"
  >
    <a
      href="#"
      title="first page"
    >
      <span
        aria-hidden="true"
        class="fa fa-angle-double-left i"
      />
    </a>
  </li>
  <li
    class="disabled"
  >
    <a
      href="#"
      title="previous page"
    >
      <span
        aria-hidden="true"
        class="fa fa-angle-left i"
      />
    </a>
  </li>
</ul>
`;

exports[`PaginationRow.ButtonGroup renders 1`] = `
<div
  class="custom-class pagination-pf-pagesize btn-group"
/>
`;

exports[`PaginationRow.Forward renders 1`] = `
<ul
  class="pagination pagination-pf-forward"
>
  <li
    class=""
  >
    <a
      href="#"
      title="Next Page"
    >
      <span
        aria-hidden="true"
        class="fa fa-angle-right i"
      />
    </a>
  </li>
  <li
    class=""
  >
    <a
      href="#"
      title="Last Page"
    >
      <span
        aria-hidden="true"
        class="fa fa-angle-double-right i"
      />
    </a>
  </li>
</ul>
`;

exports[`PaginationRow.Items renders 1`] = `
<span>
  <span
    class="pagination-pf-items-current"
  >
    0-10
  </span>
   of 
  <span
    class="pagination-pf-items-total"
  >
    55
  </span>
</span>
`;

exports[`Paginator renders properly a middle page 1`] = `
<form
  class="content-view-pf-pagination list-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropup pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        10 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            5
          </a>
        </li>
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
      </ul>
    </div>
    <span>
      per page
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        31-40
      </span>
       of 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="First Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="Previous Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    >
      Current Page
    </label>
    <input
      class="pagination-pf-page form-control"
      type="text"
      value="4"
    />
    <span>
       of 
      <span
        class="pagination-pf-pages"
      >
        8
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="Next Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="Last Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;

exports[`Paginator renders properly the first page 1`] = `
<form
  class="content-view-pf-pagination list-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropup pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        10 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            5
          </a>
        </li>
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
      </ul>
    </div>
    <span>
      per page
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        1-10
      </span>
       of 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class="disabled"
      >
        <a
          href="#"
          title="First Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class="disabled"
      >
        <a
          href="#"
          title="Previous Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    >
      Current Page
    </label>
    <input
      class="pagination-pf-page form-control"
      type="text"
      value="1"
    />
    <span>
       of 
      <span
        class="pagination-pf-pages"
      >
        8
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="Next Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="Last Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;

exports[`Paginator renders properly the last page 1`] = `
<form
  class="content-view-pf-pagination list-view-pf-pagination clearfix "
>
  <div
    class="form-group"
  >
    <div
      class="dropup pagination-pf-pagesize btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-default"
        id="pagination-row-dropdown"
        role="button"
        type="button"
      >
        10 
        <span
          class="caret"
        />
      </button>
      <ul
        aria-labelledby="pagination-row-dropdown"
        class="dropdown-menu"
        role="menu"
      >
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            5
          </a>
        </li>
        <li
          class="active"
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            10
          </a>
        </li>
        <li
          class=""
          role="presentation"
        >
          <a
            href="#"
            role="menuitem"
            tabindex="-1"
          >
            15
          </a>
        </li>
      </ul>
    </div>
    <span>
      per page
    </span>
  </div>
  <div
    class="form-group"
  >
    <span>
      <span
        class="pagination-pf-items-current"
      >
        71-75
      </span>
       of 
      <span
        class="pagination-pf-items-total"
      >
        75
      </span>
    </span>
    <ul
      class="pagination pagination-pf-back"
    >
      <li
        class=""
      >
        <a
          href="#"
          title="First Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-left i"
          />
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
          title="Previous Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-left i"
          />
        </a>
      </li>
    </ul>
    <label
      class="sr-only control-label"
    >
      Current Page
    </label>
    <input
      class="pagination-pf-page form-control"
      type="text"
      value="8"
    />
    <span>
       of 
      <span
        class="pagination-pf-pages"
      >
        8
      </span>
    </span>
    <ul
      class="pagination pagination-pf-forward"
    >
      <li
        class="disabled"
      >
        <a
          href="#"
          title="Next Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-right i"
          />
        </a>
      </li>
      <li
        class="disabled"
      >
        <a
          href="#"
          title="Last Page"
        >
          <span
            aria-hidden="true"
            class="fa fa-angle-double-right i"
          />
        </a>
      </li>
    </ul>
  </div>
</form>
`;
